validator_derive_tests/tests/compile-fail/custom/custom_not_string.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(custom(function = 2))]
    s: String,
}

fn main() {}
